samples/_failures_safe/1761628103_28c2db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f4ba4c2.c: In function ‘main’:
./samples/SAFE/__tmp_6f4ba4c2.c:143:34: error: expected ‘]’ at end of input
  143 |     decompressed.data[decomp_size
      |                                  ^
      |                                  ]
./samples/SAFE/__tmp_6f4ba4c2.c:143:5: error: expected declaration or statement at end of input
  143 |     decompressed.data[decomp_size
      |     ^~~~~~~~~~~~
